# race-manager

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  TESTING.md  TEST_SUMMARY.md  app.py  database.py  docker-compose.yml  gunicorn.conf.py  pyproject.toml  sample_runners.csv
.github/workflows/: ci.yml
static/: style.css
templates/: base.html  checkin.html  finish_line.html  index.html  race.html  ranking.html
tests/: conftest.py  test_app.py  test_database.py  test_utils.py
tests/fixtures/: test_data_english.csv  test_data_french.csv
