[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "race-manager"
version = "1.0.0"
description = "A lightweight web application for managing running races"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Flask>=3.0",
    "openpyxl>=3.1",
    "gunicorn>=21.2",
]
authors = [
  {name = "Antoine Isnardy", email = "isnardy.a@gmail.com"},
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools]
py-modules = ["app", "database"]

[tool.setuptools.packages.find]
where = ["."]
include = []
