[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "race-manager"
version = "1.0.0"
description = "A lightweight web application for managing running races"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Flask>=3.0",
    "openpyxl>=3.1",
    "gunicorn>=21.2",
]
authors = [
  {name = "Antoine Isnardy", email = "isnardy.a@gmail.com"},
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools]
py-modules = ["app", "database"]

[tool.setuptools.packages.find]
where = ["."]
include = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--color=yes",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]
